force-app/main/default/objects/Account/fields/crms11__Account_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Account_Discount__c</fullName>
    <description>The discount percentage to apply to all eligible, newly created line items on Opportunities and Quotes when using Flexpricer Vision Interface.</description>
    <inlineHelpText>The discount percentage to apply to all eligible, newly created line items on Opportunities and Quotes when using Flexpricer Vision Interface.</inlineHelpText>
    <label>Account Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>