force-app/main/default/objects/Account/fields/crms11__Account_Group__c.field-meta.xml
<CustomField>
    <fullName>crms11__Account_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account Group whose Matrix Price Adjustment records will be used to adjust pricing for this Account.</description>
    <inlineHelpText>The Account Group whose Matrix Price Adjustment records will be used to adjust pricing for this Account.</inlineHelpText>
    <label>Account Group</label>
    <referenceTo>crms11__Account_Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>