force-app/main/default/objects/Account/fields/crms11__Account_Limited_Product__c.field-meta.xml
<CustomField>
    <fullName>crms11__Account_Limited_Product__c</fullName>
    <description>Permits only those Products with valid Contracted Price records to be selected on Opportunities and Quotes using Flexpricer® Vision Interface.</description>
    <inlineHelpText>Permits only those Products with valid Contracted Price records to be selected on Opportunities and Quotes using Flexpricer® Vision Interface.</inlineHelpText>
    <label>Contracted Prices Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Pricing</fullName>
                <label>Contracted Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>