force-app/main/default/objects/Account/fields/crms11__Account_Price_List_Filter__c.field-meta.xml
<CustomField>
    <fullName>crms11__Account_Price_List_Filter__c</fullName>
    <description>Filter Account Price List on Contracted Prices (Client Pricing) and/or those products that appear in Product Groups with Matrix Price Adjustments with this Account&apos;s Account Group.</description>
    <inlineHelpText>Filter Account Price List on Contracted Prices (Client Pricing) and/or those products that appear in Product Groups with Matrix Price Adjustments with this Account&apos;s Account Group.</inlineHelpText>
    <label>Account Price List Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matrix Price</fullName>
                <label>Segmented Only</label>
            </value>
            <value>
                <fullName>Client Price</fullName>
                <label>Contracted Only</label>
            </value>
            <value>
                <fullName>Matrix &amp; Client Price</fullName>
                <label>Segmented &amp; Contracted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>