force-app/main/default/objects/Account/fields/crms11__Apply_Account_Discount_to_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>crms11__Apply_Account_Discount_to_Account_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Account Group is populated, permit the Account Discount to be applied to its associated Matrix Price Adjustments.</description>
    <inlineHelpText>If Account Group is populated, permit the Account Discount to be applied to its associated Matrix Price Adjustments.</inlineHelpText>
    <label>Apply Account Discount to Account Group</label>
    <type>Checkbox</type>
</CustomField>