force-app/main/default/objects/Account/fields/crms11__Default_Location__c.field-meta.xml
<CustomField>
    <fullName>crms11__Default_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default Location Filter to specify on newly created Opportunities.</description>
    <inlineHelpText>The default Location Filter to specify on newly created Opportunities.</inlineHelpText>
    <label>Default Location Filter</label>
    <referenceTo>crms11__Location__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>