force-app/main/default/objects/Account/fields/crms11__Escalate_Client_Pricing_to_ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Escalate_Client_Pricing_to_ParentAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the Account to benefit from Contracted Pricing records that are stored against its Parent Account.</description>
    <inlineHelpText>Allows the Account to benefit from Contracted Pricing records that are stored against its Parent Account.</inlineHelpText>
    <label>Use Contracted Prices from Parent</label>
    <type>Checkbox</type>
</CustomField>