force-app/main/default/objects/Account/fields/crms11__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>crms11__Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set this Pricebook on new Opportunities for this Account.</description>
    <inlineHelpText>Set this Pricebook on new Opportunities for this Account.</inlineHelpText>
    <label>Account Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>