force-app/main/default/objects/Account/fields/crms11__Use_Account_Discount_from_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>crms11__Use_Account_Discount_from_Parent_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the Account to benefit from Account Discount that is stored against its Parent Account.</description>
    <inlineHelpText>Allows the Account to benefit from Account Discount that is stored against its Parent Account.</inlineHelpText>
    <label>Use Account Discount from Parent</label>
    <type>Checkbox</type>
</CustomField>